--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  description: MyText
-  duration: 1
+  title: Meu Filme
+  description: Minha Descricao
+  duration: 120
   release_date: 2024-05-03
   image: MyString
 
